k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqttx-ingress
  namespace: mqttx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - host: mqttx.k8s.jorblad.se
    http:
      paths:
      - backend:
          service:
            name: mqttx-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mqttx.k8s.jorblad.se
    secretName: mqttx-k8s-jorblad-se-tls
